[Fix] block title position on mobile

--- a/src/assets/scss/agenda.scss
+++ b/src/assets/scss/agenda.scss
@@ -155,7 +155,6 @@
       @media screen and (max-width: $max-width-small-0) {
         width: 80%;
         height: 50px;
-        padding-top: 13px;
       }
       @media screen and (max-width: $max-width-small-1) {
         width: 85%;
